css/main.css
body {
    margin: 0;
    padding: 0;
}

code {
    background-color: rgba(0, 0, 0, .07);
    padding: 1pt 3pt;
}

#hero {
    background: url(../img/title_800.jpg) 70% 50%/cover;
    position: relative;
    height: 90vh;
    box-shadow: 0 0 30pt black;
    z-index: 100;
}

header {
    font-family: 'Open Sans', sans-serif;
    position: absolute;
    text-align: center;
    top: 50%;
    width: 100%;
    color: #fff;
    font-size: 26px;
    transition: 1s .6s opacity, 1s .6s transform;
    opacity: 0;
    transform: translate(0, 0);
}

header.shown {
    opacity: 1;
    transform: translate(0, -50%);
}

header h1 {
    text-shadow: 2px 2px 6px black;
    font-weight: 300;
}

header ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

header li {
    display: inline-block;
    opacity: 0;
}

header li:nth-child(1) { transition: .8s opacity 1.6s; }
header li:nth-child(2) { transition: .8s opacity 2.4s; }

header.shown li {
    opacity: 1;
}

header a {
    color: #eee !important;
    text-decoration: none;
    font-size: 8pt;
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 1pt;
    background-color: rgba(0, 0, 0, .5);
    border-radius: 4pt;
    padding: 6pt 8pt;
    margin: 0 12pt;
    transition: .2s color, .2s background-color;
}

header a:hover {
    color: #fff;
    background-color: rgba(0, 0, 0, .7);
}

main {
    width: 100%; /* for IE */
    margin-bottom: 550px; /* footer size + padding */
    display: block; /* To allow margin to work in IE */
    /* IE: do not use background-color to make footer visible */
}

section {
    font-family: 'Open Sans', sans-serif;
    font-size: .9em;
    padding: 100px 50px;
    box-sizing: border-box;
    text-align: center;
    width: 100%;
    margin: 0 auto;
}

section a {
    padding: 2pt 4pt;
    margin: 0;
    border-radius: 4pt;
    text-decoration: none;
    border-bottom: 1px dotted;
}

section a:visited {
    color: darkblue;
}

section a:hover {
    background-color: rgba(0, 0, 0, .1);
}

section h2 {
    font-weight: 300;
    font-size: 2.8em;
    margin: 0 0 30px 0;
}

section p {
    line-height: 20pt;
}

#s-lame {
    color: white;
    position: relative;
    background: #005888;
}

#s-lame .background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: url(../img/sprite1.png) center/cover;
    transition: .8s opacity;
    opacity: 0;
}

#s-lame .background.shown {
    opacity: 1;
}

#s-lame .content {
    background-color: rgba(0, 0, 0, .2);
    margin-top: 60pt;
    margin-left: 45%;
    padding: 3pt 0;
}

#s-lame p {
    margin: 0;
    padding: 15pt 10pt;
    text-align: left;
}

#s-lame p:nth-child(2) {
    background-color: rgba(0, 0, 0, .2);
}

#s-templating {
    overflow: hidden;
    background-color: #ffe51e;
}

#s-templating h2 {
    margin-bottom: 50pt;
}

#s-templating h2 > span {
    font-size: .6em;
    display: block;
}

#s-templating .content {
    height: 400px;
    display: table;
}

#s-templating .content > div {
    display: table-cell;
    vertical-align: middle;
    margin: 0 auto;
}

#s-templating p {
    margin: 45pt 0;
}

#phone {
    text-align: left;
    position: relative;
    width: 228px;
    height: 400px;
    float: right;
    transform: translate(270px, 0);
    transition: .7s transform cubic-bezier(0, 0, 0, 1);
    perspective: 400px;
}

#phone.shown {
    transform: translate(0, 0px);
}

#phone.shown > img {
    margin: 0;
    position: absolute;
    opacity: 0;
    transition: .7s transform ease-out .1s;
    transform: rotateY(0deg);
}

#phone.shown img {
    transform: rotateY(-15deg);
}

#phone > img:nth-child(1) { animation: phoneslides 30s 24s infinite; }
#phone > img:nth-child(2) { animation: phoneslides 30s 18s infinite; }
#phone > img:nth-child(3) { animation: phoneslides 30s 12s infinite; }
#phone > img:nth-child(4) { animation: phoneslides 30s  6s infinite; }
#phone > img:nth-child(5) { animation: phoneslides 30s  0s infinite; }

@keyframes phoneslides {
    0%   { opacity: 1; }
    20%  { opacity: 1; }
    22%  { opacity: 0; }
    98%  { opacity: 0; }
    100% { opacity: 1; }
}

#s-stories {
    background: linear-gradient(to top right, rgba(210,255,82,1) 0%, rgba(145,232,66,1) 100%);
}

#s-stories div {
    margin: 20pt auto;
    background-color: rgba(255, 255, 255, .6);
    padding: 10pt;
    border-radius: 10pt;
    width: 90%;
    height: 500px;
    transition: .8s opacity;
    opacity: 0;
}

#s-stories div.shown {
    opacity: 1;
}

#s-stories object {
    background-color: white;
    width: 100%;
    height: 100%;
}

#s-marco {
    color: white;
    background-color: #890CE8;
}

#s-navigating {
    color: black;
    background: linear-gradient(to bottom right, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
}

#s-navigating .container {
    display: flex;
}

#s-navigating .container > div {
    flex-grow: 1;
    width: 100%;
    margin: 10pt;
    padding: 10pt;
    color: black;
    background-color: rgba(255, 255, 255, .4);
    border: 3pt solid rgba(255, 255, 255, .6);
    border-radius: 15pt;
    transition: .5s opacity, .5s transform;
    transform: translate(0, 50px);
    opacity: 0;
}

#s-navigating .container > div:nth-child(1) { transition-delay: 0s; }
#s-navigating .container > div:nth-child(2) { transition-delay: .5s; }
#s-navigating .container > div:nth-child(3) { transition-delay: 1s; }

#s-navigating .container.shown > div {
    transform: translate(0, 0px);
    opacity: 1;
}

#s-navigating h3 {
    font-weight: 400;
    margin: 0;
}

#s-navigating pre {
    margin-top: 2pt;
    display: block;
}

#s-navigating .container p {
    font-size: .8em;
    line-height: 15pt;
}

#s-navigating li:nth-child(1) { float: left; }
#s-navigating li:nth-child(2) { display: inline-block; }
#s-navigating li:nth-child(3) { float: right; }

#s-compile {
    background-color: white; /* IE: also remove bg from main */
}

#s-compile p {
    line-height: normal;
}

#s-compile .container {
    display: flex;
}

#s-compile .container > div {
    width: 100%;
    text-align: justify;
    margin: 0 20pt;
}

#hesitate { margin-top: 40pt; }
#hesitate:before, #hesitate:after { content: '\2014'}

footer {
    font-family: 'Open Sans', sans-serif;
    color: #888;

    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 350px;
    padding: 100px 0;
    text-align: center;
    background: #ddd;
    z-index: -1;
}

footer h2 {
    font-size: 1.4em;
    font-weight: 400;
    margin-top: 20pt;
    margin-bottom: 5pt;
}

footer span {
    vertical-align: middle;
}

footer ul {
    margin: 3pt;
    list-style-type: none;
    padding: 0;
}

footer li {
    margin: 0 10pt;
    display: inline-block;
}

footer img {
    opacity: .7;
    transition: .5s opacity;
}

footer img:hover {
    opacity: 1;
}

#gh {
    font-size: .8em;
    margin-top: 30pt;
}

#page-author {
    position: fixed;
    width: 100%;
    bottom: 8pt;
    text-transform: uppercase;
    font-weight: 600;
    font-size: .7em;
    letter-spacing: 1pt;
}

